gcp5/monitor-k8s/grafana/gra-depoly.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.4.1  # 원하는 버전 명시
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: config
            mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: config
          configMap:
            name: grafana-datasources
