gcp5/monitor-k8s/grafana/gra-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP  # NodePort로 바꾸면 외부 접속 가능
